testsuite/tests/indexed-types/should_fail/T7729a.stderr

T7729a.hs:36:26: error:
    • Couldn't match type: BasePrimMonad m
                     with: t0 m0
      Expected: BasePrimMonad (Rand m) a
        Actual: t0 m0 a
    • In the first argument of ‘liftPrim’, namely ‘(lift x)’
      In the expression: liftPrim (lift x)
      In an equation for ‘liftPrim’: liftPrim x = liftPrim (lift x)
    • Relevant bindings include
        x :: BasePrimMonad (Rand m) a (bound at T7729a.hs:36:12)
        liftPrim :: BasePrimMonad (Rand m) a -> Rand m a
          (bound at T7729a.hs:36:3)
